// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`diff-test: roll changelog == bash oracle > generate --json → machine-readable (deterministic) 1`] = `
{
  "status": 0,
  "stderr": "",
  "stdout": "{
  "stories_found": 4,
  "stories_drafted": 2,
  "draft": [
    {
      "id": "US-CL-006",
      "desc": "新增 changelog generate 草稿生成命令",
      "category": "新功能",
      "source": ""
    },
    {
      "id": "FIX-178",
      "desc": "修复 changelog 重复条目泄漏",
      "category": "稳定性",
      "source": "loop"
    }
  ],
  "uncarded_merged": []
}
",
}
`;

exports[`diff-test: roll changelog == bash oracle > generate --no-ai --write into a file with existing ## Unreleased (replace) 1`] = `
{
  "status": 0,
  "stderr": "",
  "stdout": "[roll] Updated CHANGELOG.md
",
}
`;

exports[`diff-test: roll changelog == bash oracle > generate --no-ai --write into a file with existing ## Unreleased (replace) 2`] = `
"# Changelog

## Unreleased

### 新功能

- 新增 changelog generate 草稿生成命令（US-CL-006）

### 稳定性

- 修复 changelog 重复条目泄漏（FIX-178） \`[loop]\`

## v1.0.0

- old
"
`;

exports[`diff-test: roll changelog == bash oracle > generate --no-ai --write → splices ## Unreleased into CHANGELOG.md 1`] = `
{
  "status": 0,
  "stderr": "",
  "stdout": "[roll] Updated CHANGELOG.md
",
}
`;

exports[`diff-test: roll changelog == bash oracle > generate --no-ai --write → splices ## Unreleased into CHANGELOG.md 2`] = `
"# Changelog

## Unreleased

### 新功能

- 新增 changelog generate 草稿生成命令（US-CL-006）

### 稳定性

- 修复 changelog 重复条目泄漏（FIX-178） \`[loop]\`


## v1.0.0

- old release note
"
`;

exports[`diff-test: roll changelog == bash oracle > generate --no-ai with no Done stories → no-new note 1`] = `
{
  "status": 0,
  "stderr": "",
  "stdout": "# No new ✅ Done stories found for CHANGELOG.
",
}
`;

exports[`diff-test: roll changelog == bash oracle > generate --no-ai → deterministic draft (release-aware filter) 1`] = `
{
  "status": 0,
  "stderr": "",
  "stdout": "## Unreleased

### 新功能

- 新增 changelog generate 草稿生成命令（US-CL-006）

### 稳定性

- 修复 changelog 重复条目泄漏（FIX-178） \`[loop]\`
",
}
`;

exports[`diff-test: roll changelog == bash oracle > unknown subcommand → exit 1 (en) 1`] = `
{
  "status": 1,
  "stderr": "[roll] Unknown subcommand: bogus
[roll] Try: roll changelog generate
",
  "stdout": "",
}
`;

exports[`diff-test: roll changelog == bash oracle > unknown subcommand → exit 1 (zh) 1`] = `
{
  "status": 1,
  "stderr": "[roll] 未知子命令：bogus
[roll] Try: roll changelog generate
",
  "stdout": "",
}
`;
